# my-agentic-assets-manager

./: .gitignore  README.md  justfile  pyproject.toml
docs/superpowers/plans/: 2026-06-06-maam-phase-1-bootstrap.md
docs/superpowers/specs/: 2026-06-06-maam-design.md  2026-06-06-msm-reuse-survey.md
examples/: project-config.yaml  user-config.yaml
maam/catalog/: manager.py  skills.py
maam/cli/: app.py  wizard.py
maam/config/: io.py  models.py  paths.py
maam/core/: service.py
maam/deploy/: engine.py
maam/tools/: manager.py
maam/validate/: health.py
tests/: test_agent_deploy.py  test_catalog.py  test_cli.py  test_config.py  test_export.py  test_paths.py  test_profiles.py  test_sync.py  test_tools.py
