[project]
name = "my-agentic-assets-manager"
version = "0.1.0"
description = "Project-local asset manager for agentic development environments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rich>=13.7",
    "typer>=0.12",
    "questionary>=2.0",
]

[project.scripts]
maam = "maam.cli.app:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["maam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
